# rpg-sim

./: .gitignore  ASSET_IMAGE_REQUIREMENTS.md  Broken_features.md  CLAUDE.md  Cargo.toml  PENDING_FEATURES.md  Realm_of_Bounties_GDD.txt  features.json
.claude/: settings.local.json
.claude/docs/: architectural_patterns.md
assets/GameplayAssetsV2/: MISSING_IMAGE_REPORT.json  manifest.json
docs/: api.md  architecture.md  components.md  gdd_summary.md
src/: art_catalog.rs  audio.rs  building.rs  camera.rs  combat.rs  components.rs  day_night.rs  debug.rs  economy.rs  enemy.rs  features.rs  hero.rs  logger.rs  main.rs  map_layout.rs  menu.rs  mouse.rs  noise_map.rs  save.rs  sprites.rs  ui.rs
tools/: CLAUDE_SKILLS.md  README.md  __init__.py  __main__.py  claude_wrapper.py  clean_building_alpha.py  gen_decorations.py  generate_mythical_assets.py  prepare_newassets_buildings.py
tools/commands/: analyze.py  assets.py  build.py  cli.py  docs.py  ecs.py  game.py  git.py  quality.py  release.py
tools/sprite_composer/: Cargo.toml
tools/sprite_composer/src/: main.rs
