[package]
name = "realm-of-bounties"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.6.1"
bevy_ecs_ldtk = "0.2.0"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
noise = "0.7"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
# bevy_noise_map = { git = "https://github.com/yegorstolyarov/bevy_noise_map" }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
